--- a/lesson1/substrate-node-template/runtime/Cargo.toml
+++ b/lesson1/substrate-node-template/runtime/Cargo.toml
@@ -24,9 +24,6 @@ version = '1.3.4'
 hex-literal = { optional = true, version = '0.3.1' }
 serde = { features = ['derive'], optional = true, version = '1.0.101' }
 
-# local dependencies
-pallet-template = { path = '../pallets/template', default-features = false, version = '2.0.0' }
-
 # Substrate dependencies
 frame-benchmarking = { default-features = false, optional = true, version = '2.0.0' }
 frame-executive = { default-features = false, version = '2.0.0' }
@@ -54,6 +51,11 @@ sp-std = { default-features = false, version = '2.0.0' }
 sp-transaction-pool = { default-features = false, version = '2.0.0' }
 sp-version = { default-features = false, version = '2.0.0' }
 
+# local dependencies
+pallet-template = { path = '../pallets/template', default-features = false, version = '2.0.0' }
+pallet-poe = { path = '../pallets/poe', default-features = false }
+
+
 [features]
 default = ['std']
 runtime-benchmarks = [
@@ -78,7 +80,6 @@ std = [
     'pallet-grandpa/std',
     'pallet-randomness-collective-flip/std',
     'pallet-sudo/std',
-    'pallet-template/std',
     'pallet-timestamp/std',
     'pallet-transaction-payment/std',
     'pallet-transaction-payment-rpc-runtime-api/std',
@@ -93,4 +94,6 @@ std = [
     'sp-std/std',
     'sp-transaction-pool/std',
     'sp-version/std',
+    'pallet-template/std',
+    'pallet-poe/std',
 ]
