--- a/lesson6/substrate-node-template/node/Cargo.toml
+++ b/lesson6/substrate-node-template/node/Cargo.toml
@@ -21,6 +21,7 @@ substrate-build-script-utils = '2.0.1'
 [dependencies]
 jsonrpc-core = '15.0.0'
 structopt = '0.3.8'
+hex-literal = '0.3.1'
 
 pallet-contracts = '2.0.1'
 pallet-contracts-rpc = '0.8.1'
